CPP_CORE/include/creative_core_api.h

typedef void* CreativeBrushHandle;
int cs_lz4_available(void);
int cs_lz4_compress_bound(int input_size);
int cs_lz4_compress(const uint8_t* input, int input_size,
                    uint8_t* output, int output_capacity, int* output_size);
int cs_lz4_decompress(const uint8_t* input, int input_size,
                      uint8_t* output, int expected_size, int* output_size);
int cs_cslz_max_encoded_size(int raw_size);
int cs_cslz_encode(const uint8_t* rgba, int width, int height, int stride,
                   uint8_t* output, int output_capacity, int* output_size);
int cs_cslz_decode_info(const uint8_t* encoded, int encoded_size,
                        int* width, int* height, int* stride,
                        int* raw_size, int* compressed);
int cs_cslz_decode(const uint8_t* encoded, int encoded_size,
                   uint8_t* output, int output_capacity);
void cs_image_restore_alpha_rect(
    uint8_t* dst, const uint8_t* src,
    int width, int height, int dstStride, int srcStride,
    int x, int y, int rectWidth, int rectHeight);
int cs_image_restore_alpha_tile(uint8_t* dst, int dstWidth, int dstHeight,
                                int dstStride, const uint8_t* src,
                                int srcWidth, int srcHeight, int srcStride,
                                int dstX, int dstY, int srcX, int srcY,
                                int rectWidth, int rectHeight);
// Paint a foreground-to-transparent linear gradient into a caller-owned Qt
// image buffer. Geometry/events remain in the UI; raster composition is native.
int cs_apply_linear_gradient(uint8_t* pixels, int width, int height, int stride,
                             int image_format, float start_x, float start_y,
                             float end_x, float end_y,
                             int red, int green, int blue, int alpha);
void cs_filter_brush_segment(
    uint8_t* rgba, int width, int height, int stride,
    float startX, float startY, float startPressure,
    float endX, float endY, float endPressure,
    float size, float spacing, float opacity, int sharpen);
CreativeBrushHandle
cs_brush_create();
void
cs_brush_destroy(
    CreativeBrushHandle handle
);
void
cs_brush_set_size(
    CreativeBrushHandle handle,
    float size
);
void
cs_brush_set_opacity(
    CreativeBrushHandle handle,
    float opacity
);
void
cs_brush_set_flow(
    CreativeBrushHandle handle,
    float flow
);
void
cs_brush_set_hardness(
    CreativeBrushHandle handle,
    float hardness
);
void
cs_brush_set_spacing(
    CreativeBrushHandle handle,
    float spacing
);
void
cs_brush_set_roundness(
    CreativeBrushHandle handle,
    float roundness
);
void
cs_brush_set_angle(
    CreativeBrushHandle handle,
    float angle
);
void
cs_brush_set_scatter(
    CreativeBrushHandle handle,
    float scatter
);
void
cs_brush_set_size_jitter(
    CreativeBrushHandle handle,
    float jitter
);
void
cs_brush_set_rotation_jitter(
    CreativeBrushHandle handle,
    float jitter
);
void cs_brush_set_velocity_size(CreativeBrushHandle handle, float value);
void cs_brush_set_velocity_opacity(CreativeBrushHandle handle, float value);
void cs_brush_set_velocity_flow(CreativeBrushHandle handle, float value);
void
cs_brush_set_texture_strength(
    CreativeBrushHandle handle,
    float strength
);
void
cs_brush_set_texture_scale(
    CreativeBrushHandle handle,
    float scale
);
void
cs_brush_set_texture_random_scale(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_texture_random_offset(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_texture_brightness(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_texture_contrast(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_texture_mirror(
    CreativeBrushHandle handle,
    int enabled
);
void
cs_brush_set_texture_affect_opacity(
    CreativeBrushHandle handle,
    int enabled
);
// Loads and decodes a grayscale brush texture in the native brush engine.
// Returns 1 on success; invalid or oversized images leave the current texture
// unchanged. The UI may pass the chosen file path but never decodes the pixels.
int cs_brush_set_texture_path(CreativeBrushHandle handle, const char* path);
void cs_brush_clear_texture(CreativeBrushHandle handle);
int cs_brush_set_bitmap_tip_path(CreativeBrushHandle handle, const char* path);
int cs_brush_set_bitmap_tip_png(CreativeBrushHandle handle,
                                const uint8_t* data, uint64_t byte_count);
void cs_brush_clear_bitmap_tip(CreativeBrushHandle handle);
void
cs_brush_set_dirty_color(
    CreativeBrushHandle handle,
    int enabled
);
void
cs_brush_set_hue_jitter(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_saturation_jitter(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_brightness_jitter(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_stroke_gradient(
    CreativeBrushHandle handle,
    int enabled
);
void
cs_brush_set_linear_gradient(
    CreativeBrushHandle handle,
    int enabled
);
void
cs_brush_set_radial_gradient(
    CreativeBrushHandle handle,
    int enabled
);
void
cs_brush_set_gradient_amount(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_gradient_color(
    CreativeBrushHandle handle,
    uint8_t red,
    uint8_t green,
    uint8_t blue,
    uint8_t alpha
);
void
cs_brush_set_blend_mode(
    CreativeBrushHandle handle,
    int mode
);
void
cs_brush_set_paint_mix(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_wetness(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_pickup(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_dilution(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_smudge(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_paint_persistence(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_color_carry(
    CreativeBrushHandle handle,
    float value
);
void
cs_brush_set_wet_mix(
    CreativeBrushHandle handle,
    int enabled
);
void
cs_brush_set_sample_canvas(
    CreativeBrushHandle handle,
    int enabled
);
void cs_brush_set_smudge_tool(CreativeBrushHandle handle, int enabled);
void
cs_brush_set_eraser(
    CreativeBrushHandle handle,
    int enabled
);
void
cs_brush_set_color(
    CreativeBrushHandle handle,
    uint8_t red,
    uint8_t green,
    uint8_t blue,
    uint8_t alpha
);
void cs_brush_set_pressure_size(CreativeBrushHandle handle, int enabled);
void cs_brush_set_pressure_opacity(CreativeBrushHandle handle, int enabled);
void cs_brush_set_pressure_flow(CreativeBrushHandle handle, int enabled);
void cs_brush_set_minimum_size(CreativeBrushHandle handle, float value);
void cs_brush_set_minimum_opacity(CreativeBrushHandle handle, float value);
void cs_brush_set_minimum_flow(CreativeBrushHandle handle, float value);
void
cs_brush_begin_stroke(
    CreativeBrushHandle handle,
    float x,
    float y,
    float pressure
);
void
cs_brush_draw_segment(
    CreativeBrushHandle handle,
    uint8_t* rgba,
    int width,
    int height,
    int bytesPerLine,
    float startX,
    float startY,
    float startPressure,
    float endX,
    float endY,
    float endPressure
);
void cs_brush_draw_segment_clone(
    CreativeBrushHandle handle,
    uint8_t* target, const uint8_t* source,
    int width, int height, int bytesPerLine,
    int sourceBytesPerLine, int cloneOffsetX, int cloneOffsetY,
    float startX, float startY, float startPressure, float startTiltX, float startTiltY,
    float endX, float endY, float endPressure, float endTiltX, float endTiltY);
void cs_brush_draw_segment_tilt(
    CreativeBrushHandle handle, uint8_t* rgba, int width, int height,
    int bytesPerLine, float startX, float startY, float startPressure,
    float startTiltX, float startTiltY, float endX, float endY,
    float endPressure, float endTiltX, float endTiltY
);
void
cs_brush_end_stroke(
    CreativeBrushHandle handle
);
void cs_brush_set_smoothing(CreativeBrushHandle handle, float strength);
int cs_brush_smooth_point(CreativeBrushHandle handle, float x, float y, float* outX, float* outY);
int cs_fill(
    uint8_t* pixels, int width, int height, int bytesPerLine, int imageFormat,
    int startX, int startY, int tolerance,
    uint8_t red, uint8_t green, uint8_t blue, uint8_t alpha,
    int* outX, int* outY, int* outWidth, int* outHeight
);
int cs_fill_bounds(
    const uint8_t* pixels, int width, int height, int bytesPerLine, int imageFormat,
    int startX, int startY, int tolerance,
    int* outX, int* outY, int* outWidth, int* outHeight
);
int cs_magic_wand(
    const uint8_t* pixels, int width, int height, int bytesPerLine, int imageFormat,
    int startX, int startY, int tolerance,
    uint8_t* maskArgb32, int maskBytesPerLine
);
// Rasterize a white ARGB32 mask: 0 rectangle, 1 ellipse, 2 closed lasso.
int cs_selection_shape_mask(uint8_t* output, int width, int height, int stride,
                            int shape, const float* points_xy, int point_count);
// Generate a painting-tool path: 0 line, 1 rectangle, 2 ellipse.
int cs_shape_path(int shape, double start_x, double start_y,
                  double end_x, double end_y, double* output_xy,
                  int point_capacity, int* point_count);
// Return an inclusive, normalized crop rectangle clipped to the document bounds.
int cs_crop_rect(int start_x, int start_y, int end_x, int end_y,
                 int bounds_x, int bounds_y, int bounds_width, int bounds_height,
                 int* crop_x, int* crop_y, int* crop_width, int* crop_height);
int cs_crop_image(const uint8_t* source, int source_width, int source_height,
                  int source_stride, int source_format, int crop_x, int crop_y,
                  int crop_width, int crop_height, uint8_t* output,
                  int output_stride, int output_format);
int cs_copy_image_rect(const uint8_t* source, int source_width, int source_height,
                       int source_stride, int source_format, int source_x,
                       int source_y, uint8_t* destination, int destination_width,
                       int destination_height, int destination_stride,
                       int destination_format, int destination_x, int destination_y,
                       int copy_width, int copy_height);
int cs_draw_text(uint8_t* image, int width, int height, int stride, int image_format,
                 const char* text_utf8, const char* font_serialized_utf8,
                 double x, double y, int red, int green, int blue, int alpha);
// Return the half-open tile-coordinate range intersecting a pixel rectangle.
int cs_tile_range_for_rect(int canvas_width, int canvas_height, int tile_size,
                           int rect_x, int rect_y, int rect_width, int rect_height,
                           int* first_tile_x, int* first_tile_y,
                           int* end_tile_x, int* end_tile_y);
int cs_transform_layer(const uint8_t* source, const uint8_t* selection,
                       int width, int height, int source_stride,
                       int selection_stride, int image_format,
                       uint8_t* output, int output_stride,
                       uint8_t* output_selection, int output_selection_stride,
                       float translate_x, float translate_y, float scale_x,
                       float scale_y, float rotation_degrees,
                       int* used_selection);
int cs_translate_image(const uint8_t* source, int width, int height,
                       int source_stride, int image_format,
                       uint8_t* output, int output_stride, int dx, int dy);