CORE/native_bridge.py


def lz4_compress_bytes(data: bytes):
    """Compress bytes in CreativeCore; return None when LZ4 is unavailable."""
    if not data:
        return None
    library = load_creative_core()
    if library is None or not _configure_lz4(library) or not library.cs_lz4_available():
        return None
    capacity = int(library.cs_lz4_compress_bound(len(data)))
    if capacity <= 0:
        return None
    source = ctypes.create_string_buffer(data, len(data))
    output = ctypes.create_string_buffer(capacity)
    written = ctypes.c_int()
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    if not library.cs_lz4_compress(ctypes.cast(source, byte_ptr), len(data),
                                   ctypes.cast(output, byte_ptr), capacity,
                                   ctypes.byref(written)):
        return None
    return output.raw[:written.value]


def lz4_decompress_bytes(data: bytes, expected_size: int):
    """Decompress a legacy LZ4 block; return None when the codec is unavailable."""
    if not data or expected_size <= 0:
        raise ValueError("invalid LZ4 tile size")
    library = load_creative_core()
    if library is None or not _configure_lz4(library) or not library.cs_lz4_available():
        return None
    source = ctypes.create_string_buffer(data, len(data))
    output = ctypes.create_string_buffer(int(expected_size))
    written = ctypes.c_int()
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    if not library.cs_lz4_decompress(ctypes.cast(source, byte_ptr), len(data),
            ctypes.cast(output, byte_ptr),
            int(expected_size), ctypes.byref(written)) or written.value != expected_size:
        raise ValueError("invalid LZ4 tile")
    return output.raw[:written.value]


def encode_cslz_bytes(rgba: bytes, width: int, height: int, stride: int):
    library = load_creative_core()
    if library is None or not _configure_lz4(library):
        return None
    raw_size = int(stride) * int(height)
    if (width <= 0 or height <= 0 or stride < width * 4 or raw_size != len(rgba)
            or raw_size > 16 * 1024 * 1024):
        raise ValueError("invalid CSLZ source dimensions")
    capacity = int(library.cs_cslz_max_encoded_size(raw_size))
    if capacity <= 0:
        raise ValueError("CSLZ source exceeds the codec limit")
    source = ctypes.create_string_buffer(rgba, len(rgba))
    output = ctypes.create_string_buffer(capacity)
    written = ctypes.c_int()
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    if not library.cs_cslz_encode(ctypes.cast(source, byte_ptr), int(width),
            int(height), int(stride), ctypes.cast(output, byte_ptr), capacity,
            ctypes.byref(written)):
        return None
    return output.raw[:written.value]


def decode_cslz_bytes(encoded: bytes, expected_size=None):
    """Validate and decode a complete legacy CSLZ record in CreativeCore."""
    library = load_creative_core()
    if library is None or not _configure_lz4(library):
        return None
    source = ctypes.create_string_buffer(encoded, len(encoded))
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    inputs = ctypes.cast(source, byte_ptr)
    width, height, stride, raw_size, compressed = (ctypes.c_int() for _ in range(5))
    if not library.cs_cslz_decode_info(inputs, len(encoded), ctypes.byref(width),
            ctypes.byref(height), ctypes.byref(stride), ctypes.byref(raw_size),
            ctypes.byref(compressed)):
        raise ValueError("invalid CSLZ record")
    if expected_size is not None and (width.value, height.value) != (
            int(expected_size.width()), int(expected_size.height())):
        raise ValueError("CSLZ dimensions do not match the expected tile")
    output = ctypes.create_string_buffer(raw_size.value)
    if not library.cs_cslz_decode(inputs, len(encoded),
            ctypes.cast(output, byte_ptr), raw_size.value):
        raise ValueError("invalid CSLZ pixel payload")
    return output.raw[:raw_size.value], width.value, height.value, stride.value, bool(compressed.value)


def _configure_transforms(library) -> None:
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    library.cs_transform_layer.argtypes = [byte_ptr, byte_ptr,
        ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.c_int,
        byte_ptr, ctypes.c_int, byte_ptr, ctypes.c_int,
        *([ctypes.c_float] * 5), ctypes.POINTER(ctypes.c_int)]
    library.cs_transform_layer.restype = ctypes.c_int
    library.cs_translate_image.argtypes = [byte_ptr, *([ctypes.c_int] * 4),
        byte_ptr, *([ctypes.c_int] * 3)]
    library.cs_translate_image.restype = ctypes.c_int


def _configure_gradients(library) -> None:
    library.cs_apply_linear_gradient.argtypes = [
        ctypes.POINTER(ctypes.c_uint8), *([ctypes.c_int] * 4),
        *([ctypes.c_float] * 4), *([ctypes.c_int] * 4),
    ]
    library.cs_apply_linear_gradient.restype = ctypes.c_int


def _configure_canvas_api(library) -> None:
    """Declare the stroke and raster ABI once for every Qt-facing adapter."""
    handle = ctypes.c_void_p
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    int_ptr = ctypes.POINTER(ctypes.c_int)
    double_ptr = ctypes.POINTER(ctypes.c_double)
    library.cs_shape_path.argtypes = [ctypes.c_int, *([ctypes.c_double] * 4),
        double_ptr, ctypes.c_int, int_ptr]
    library.cs_shape_path.restype = ctypes.c_int
    library.cs_crop_rect.argtypes = [*([ctypes.c_int] * 8), *([int_ptr] * 4)]
    library.cs_crop_rect.restype = ctypes.c_int
    library.cs_crop_image.argtypes = [byte_ptr, *([ctypes.c_int] * 8), byte_ptr,
                                      ctypes.c_int, ctypes.c_int]
    library.cs_crop_image.restype = ctypes.c_int
    library.cs_copy_image_rect.argtypes = [byte_ptr, *([ctypes.c_int] * 6), byte_ptr,
                                           *([ctypes.c_int] * 8)]
    library.cs_copy_image_rect.restype = ctypes.c_int
    library.cs_draw_text.argtypes = [byte_ptr, *([ctypes.c_int] * 4), ctypes.c_char_p,
                                     ctypes.c_char_p, ctypes.c_double, ctypes.c_double,
                                     *([ctypes.c_int] * 4)]
    library.cs_draw_text.restype = ctypes.c_int
    library.cs_tile_range_for_rect.argtypes = [*([ctypes.c_int] * 7), *([int_ptr] * 4)]
    library.cs_tile_range_for_rect.restype = ctypes.c_int
    library.cs_brush_create.argtypes = []
    library.cs_brush_create.restype = handle
    library.cs_brush_destroy.argtypes = [handle]
    library.cs_brush_destroy.restype = None
    library.cs_brush_set_smoothing.argtypes = [handle, ctypes.c_float]
    library.cs_brush_set_smoothing.restype = None
    library.cs_brush_smooth_point.argtypes = [handle, ctypes.c_float, ctypes.c_float,
        ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
    library.cs_brush_smooth_point.restype = ctypes.c_int
    float_setters = (
        "cs_brush_set_size", "cs_brush_set_opacity", "cs_brush_set_flow",
        "cs_brush_set_hardness", "cs_brush_set_spacing", "cs_brush_set_roundness",
        "cs_brush_set_angle", "cs_brush_set_scatter", "cs_brush_set_size_jitter",
        "cs_brush_set_rotation_jitter", "cs_brush_set_velocity_size",
        "cs_brush_set_velocity_opacity", "cs_brush_set_velocity_flow",
        "cs_brush_set_texture_strength", "cs_brush_set_texture_scale",
        "cs_brush_set_texture_random_scale", "cs_brush_set_texture_random_offset",
        "cs_brush_set_texture_brightness", "cs_brush_set_texture_contrast",
        "cs_brush_set_hue_jitter", "cs_brush_set_saturation_jitter",
        "cs_brush_set_brightness_jitter", "cs_brush_set_gradient_amount",
        "cs_brush_set_paint_mix", "cs_brush_set_wetness", "cs_brush_set_pickup",
        "cs_brush_set_dilution", "cs_brush_set_smudge", "cs_brush_set_paint_persistence",
        "cs_brush_set_color_carry", "cs_brush_set_minimum_size",
        "cs_brush_set_minimum_opacity", "cs_brush_set_minimum_flow",
    )
    int_setters = (
        "cs_brush_set_eraser", "cs_brush_set_texture_mirror",
        "cs_brush_set_texture_affect_opacity", "cs_brush_set_dirty_color",
        "cs_brush_set_stroke_gradient", "cs_brush_set_linear_gradient",
        "cs_brush_set_radial_gradient", "cs_brush_set_wet_mix",
        "cs_brush_set_sample_canvas", "cs_brush_set_smudge_tool",
        "cs_brush_set_pressure_size", "cs_brush_set_pressure_opacity",
        "cs_brush_set_pressure_flow",
    )
    for name in float_setters:
        function = getattr(library, name)
        function.argtypes = [handle, ctypes.c_float]
        function.restype = None
    for name in int_setters:
        function = getattr(library, name)
        function.argtypes = [handle, ctypes.c_int]
        function.restype = None
    library.cs_brush_set_color.argtypes = [handle, *([ctypes.c_uint8] * 4)]
    library.cs_brush_set_color.restype = None
    library.cs_brush_set_gradient_color.argtypes = [handle, *([ctypes.c_uint8] * 4)]
    library.cs_brush_set_gradient_color.restype = None
    library.cs_brush_set_blend_mode.argtypes = [handle, ctypes.c_int]
    library.cs_brush_set_blend_mode.restype = None
    library.cs_brush_begin_stroke.argtypes = [handle, *([ctypes.c_float] * 3)]
    library.cs_brush_begin_stroke.restype = None
    library.cs_brush_draw_segment.argtypes = [
        handle, byte_ptr, ctypes.c_int, ctypes.c_int, ctypes.c_int,
        *([ctypes.c_float] * 6),
    ]
    library.cs_brush_draw_segment_clone.argtypes = [
        handle, byte_ptr, byte_ptr, ctypes.c_int, ctypes.c_int, ctypes.c_int,
        ctypes.c_int, ctypes.c_int, ctypes.c_int, *([ctypes.c_float] * 10),
    ]
    library.cs_brush_draw_segment_clone.restype = None
    library.cs_brush_end_stroke.argtypes = [handle]
    library.cs_brush_end_stroke.restype = None

    library.cs_image_restore_alpha_rect.argtypes = [
        byte_ptr, byte_ptr, *([ctypes.c_int] * 8),
    ]
    library.cs_image_restore_alpha_rect.restype = None
    library.cs_image_restore_alpha_tile.argtypes = [
        byte_ptr, ctypes.c_int, ctypes.c_int, ctypes.c_int,
        byte_ptr, ctypes.c_int, ctypes.c_int, ctypes.c_int,
        *([ctypes.c_int] * 6),
    ]
    library.cs_image_restore_alpha_tile.restype = ctypes.c_int
    optional = {
        "cs_filter_brush_segment": (
            [byte_ptr, *([ctypes.c_int] * 3), *([ctypes.c_float] * 9), ctypes.c_int],
            None,
        ),
        "cs_brush_set_texture_path": ([handle, ctypes.c_char_p], ctypes.c_int),
        "cs_brush_clear_texture": ([handle], None),
        "cs_brush_set_bitmap_tip_path": ([handle, ctypes.c_char_p], ctypes.c_int),
        "cs_brush_set_bitmap_tip_png": ([handle, byte_ptr, ctypes.c_uint64], ctypes.c_int),
        "cs_brush_clear_bitmap_tip": ([handle], None),
        "cs_brush_draw_segment_tilt": (
            [handle, byte_ptr, *([ctypes.c_int] * 3), *([ctypes.c_float] * 10)], None,
        ),
        "cs_fill": (
            [byte_ptr, *([ctypes.c_int] * 7), *([ctypes.c_uint8] * 4),
             int_ptr, int_ptr, int_ptr, int_ptr], ctypes.c_int,
        ),
        "cs_fill_bounds": (
            [byte_ptr, *([ctypes.c_int] * 7), int_ptr, int_ptr, int_ptr, int_ptr],
            ctypes.c_int,
        ),
        "cs_magic_wand": (
            [byte_ptr, *([ctypes.c_int] * 7), byte_ptr, ctypes.c_int], ctypes.c_int,
        ),
    }
    for name, (arguments, result) in optional.items():
        function = getattr(library, name, None)
        if function is not None:
            function.argtypes = arguments
            function.restype = result
    shape_mask = getattr(library, "cs_selection_shape_mask", None)
    if shape_mask is not None:
        shape_mask.argtypes = [
            byte_ptr, ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.c_int,
            ctypes.POINTER(ctypes.c_float), ctypes.c_int,
        ]
        shape_mask.restype = ctypes.c_int

